--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color:rgb(250, 238, 224);
     text-align: center;
     font-family:'Open Sans', sans-serif;
@@ -7,7 +7,7 @@ body{
     
 }
 
-.container{
+.content {
     width: 100%;
     max-width: 414px;
     margin: 0 auto;
