--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -6,13 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}" />
-	<title>Template</title>
+	<title>{% block title %}Template{% endblock %}</title>
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" /> {% block head %}{% endblock %}
 </head>
 
 <body>
-  {% block content %}
-	<div class="container">
+  <div class="content">{% block content %}
 		<h1>Template Content</h1>
 		<div id="lipsum">
 			<p>
